# Asteroid

./: .gitmodules  CMakeLists.txt  README.md  install.sh  run_tests.sh
.circleci/: config.yml
examples/: run_asteroid_simple.sh  run_asteroid_starting_trees.sh  run_asteroid_support.sh  run_asteroid_support_2.sh
examples/data/: bs_gene_trees_1.newick  gene_trees_1.newick  species_tree.newick
src/: CMakeLists.txt
src/asteroid/: .asteroid.cpp.swp  Arguments.cpp  Arguments.hpp  AsteroidOptimizer.cpp  AsteroidOptimizer.hpp  CMakeLists.txt  asteroid.cpp
src/bipstep/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  StepwiseTree.cpp  StepwiseTree.hpp  bipstep.cpp
src/concasteroid/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  concasteroid.cpp
src/core/: CMakeLists.txt
src/core/DistanceMethods/: Asteroid.cpp  Asteroid.hpp  AsteroidOptimizer.cpp  AsteroidOptimizer.hpp  AsteroidTypes.hpp  InternodeDistance.cpp  InternodeDistance.hpp  MiniNJ.cpp  StepwiseAsteroid.cpp  StepwiseAsteroid.hpp
src/core/IO/: GeneSpeciesMapping.cpp  GeneSpeciesMapping.hpp  LibpllException.hpp  Logger.cpp  Logger.hpp  ParallelOfstream.hpp
src/core/maths/: Random.cpp  Random.hpp  bitvector.cpp  bitvector.hpp
src/core/parallelization/: ParallelContext.cpp  ParallelContext.hpp
src/core/trees/: InducedStepwiseTree.cpp  InducedStepwiseTree.hpp  PLLUnrootedTree.cpp  PLLUnrootedTree.hpp  SplitHashtable.cpp  SplitHashtable.hpp  StepwiseTree.cpp  StepwiseTree.hpp
src/core/util/: types.hpp
src/test/: CMakeLists.txt  test_bitvector.cpp  test_internode_distance.cpp  test_mappings.cpp  test_stepwise_induced.cpp  test_unrooted_trees.cpp
